--- a/Nivel 2/Projeto 01/index.html
+++ b/Nivel 2/Projeto 01/index.html
@@ -6,6 +6,26 @@
     <title>Móveis customizados</title>
   </head>
   <body>
+    <img src="assets/balls-decoration.svg" alt="Bolinhas decorativas de cor laranja no canto inferior direito da tela">
     
+    <div id="hero">
+      <img src="assets/image-1.png" alt="Ilustração de uma pessoa vestindo camisa amarela na sala com movéis">
+
+      <h1>
+        Ambientes únicos para você!
+      </h1>
+      <p>
+        Nós criamos ambientes exclusivos e únicos, com muito bom gosto e profissionalismo, investimos tempo e dedicação no seu projeto. 
+      </p>
+      
+      <p>
+        Tenha ambientes limpos e bem decorados, transmitindo elegância e finesse para todo aquele que estiver ali. 
+      </p>
+    </div>
+
+    <div id="footer">
+      <a href="https://Instagram/moveisparavoce">Instagram</a>
+      <a href="mailto:contato@moveisparavoce.com">Fale conosco</a>
+    </div>
   </body>
 </html>
