--- a/Nivel 2/Projeto 01/index.html
+++ b/Nivel 2/Projeto 01/index.html
@@ -29,9 +29,9 @@
     </div>
 
     <div id="footer">
-      <a href="https://Instagram/moveisparavoce">Instagram</a>
-
+      <div class="line"></div>
       
+      <a href="https://Instagram/moveisparavoce">Instagram</a>
 
       <a href="mailto:contato@moveisparavoce.com">Fale conosco</a>
     </div>
