--- a/Nivel 2/Projeto 01/index.html
+++ b/Nivel 2/Projeto 01/index.html
@@ -30,8 +30,8 @@
 
     <div id="footer">
       <div class="line"></div>
-      
-      <a href="https://Instagram/moveisparavoce">Instagram</a>
+
+      <a target="_blank" href="https://Instagram/moveisparavoce">Instagram</a>
 
       <a href="mailto:contato@moveisparavoce.com">Fale conosco</a>
     </div>
