Estruturando HTML com tags semânticas

--- a/Nivel 2/Projeto 02/index.html
+++ b/Nivel 2/Projeto 02/index.html
@@ -6,9 +6,41 @@
   <title>Treine.me</title>
 </head>
 <body>
-  <header>
-    
-  </header>
+
+  <div class="page" >
   
+  <header>
+    <img src="assets/logo.svg" alt="Logo Treine.me">
+    <nav>
+      <ul>
+        <li>Home</li>
+        <li>Sobre</li>
+        <li>Treinar</li>
+      </ul>
+    </nav>
+
+  </header>
+  <main>
+    <section class="text">
+      <h1>Treinos exclusivos
+        para você!</h1>
+      <p>
+        Nós criamos treinos <strong>exclusivos e únicos para você.</strong> <br/> 
+        Invista no seu corpo e <strong>tenha muito mais performance</strong> e qualidade de vida.
+      </p>
+
+      <button>
+        <img src="assets/whats.svg" alt="Iconé do whatsapp">
+        Comece já
+      </button>
+    </section>
+
+    <img src="assets/fitness-jump.png" alt="Ilustração de uma mulher pulando corda em uma academia">
+
+  </main>
+  <footer>
+
+  </footer>
+  </div>
 </body>
 </html>
