Finalizando a estrutura do HTML semântico

--- a/Nivel 2/Projeto 02/index.html
+++ b/Nivel 2/Projeto 02/index.html
@@ -18,8 +18,8 @@
         <li>Treinar</li>
       </ul>
     </nav>
-
   </header>
+
   <main>
     <section class="text">
       <h1>Treinos exclusivos
@@ -39,8 +39,12 @@
 
   </main>
   <footer>
-
+    Fale conosco no Instagram
+    <a href="https://instagram.com/treineme" target="_blank">@treine.me</a>
   </footer>
   </div>
+
+  <img src="assets/balls.svg" alt="Bolinhas decorativas verdes no canto inferior direito da página">
+
 </body>
 </html>
