Melhorias na acessibilidade e refatoração

--- a/Nivel 2/Projeto 02/index.html
+++ b/Nivel 2/Projeto 02/index.html
@@ -10,16 +10,18 @@
 
   <div class="page" >
   
-  <header>
-    <img src="assets/logo.svg" alt="Logo Treine.me">
+ 
     <nav>
+      <a id="logo" href="#">
+        <img src="assets/logo.svg" alt="Logo Treine.me">
+      </a>
       <ul>
-        <li>Home</li>
-        <li>Sobre</li>
-        <li>Treinar</li>
+        <li><a href="#">Home</li></a>
+        <li><a href="#">Sobre</li></a>
+        <li><a href="#">Treinar</li></a>
       </ul>
     </nav>
-  </header>
+ 
 
   <main>
     <section class="text">
