--- a/Nivel 2/Projeto 02/index.html
+++ b/Nivel 2/Projeto 02/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Treine.me</title>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,7 +28,7 @@
 
   <main>
     <section class="text">
-      <h1>Treinos exclusivos
+      <h1>Treinos <span>exclusivos</span>
         para você!</h1>
       <p>
         Nós criamos treinos <strong>exclusivos e únicos para você.</strong> <br/> 
