Background linear-gradient e ajustes finais

--- a/Nivel 2/Projeto 02/index.html
+++ b/Nivel 2/Projeto 02/index.html
@@ -45,12 +45,12 @@
 
   </main>
   <footer>
-    Fale conosco no Instagram
+    fale conosco no Instagram
     <a href="https://instagram.com/treineme" target="_blank">@treine.me</a>
   </footer>
   </div>
 
-  <img src="assets/balls.svg" alt="Bolinhas decorativas verdes no canto inferior direito da página">
+  <img id="ball" src="assets/balls.svg" alt="Bolinhas decorativas verdes no canto inferior direito da página">
 
 </body>
 </html>
