--- a/Stage3/Projeto03/index.html
+++ b/Stage3/Projeto03/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crie seu Evento</title>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@600;700&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Crie e compartilhe seu evento.</h1>
-        <p>O primeiro passo, é preencher esse formulário de inscrição.</p>
-    </header>
-    <form action="">
+    <div class="page">
 
-    </form>    
+        <header>
+            <h1>Crie e compartilhe seu evento.</h1>
+            <p>O primeiro passo, é preencher esse formulário de inscrição.</p>
+        </header>
+        <form action="">
+            
+            <fieldset>
+                <legend>Informações do Evento</legend> 
+            </fieldset>
+
+        </form>    
+    </div>
 </body>
 </html>
