Formatando o campo de texto

--- a/Stage3/Projeto03/index.html
+++ b/Stage3/Projeto03/index.html
@@ -20,7 +20,12 @@
         <form action="">
             
             <fieldset>
-                <legend>Informações do Evento</legend> 
+                <legend>Informações do Evento</legend>
+
+                <div class="input-wrapper">
+                    <label for="event-title">Título do evento <span>(mínimo 8 caracteres)</span></label>
+                    <input type="text" name="event-title" id="event-title"/>
+                </div>
             </fieldset>
 
         </form>    
