Estilizando o campo select

--- a/Stage3/Projeto03/index.html
+++ b/Stage3/Projeto03/index.html
@@ -43,7 +43,17 @@
                         <label for="event-url">Informações  extras</span></label>
                         <textarea id="event-info"></textarea>
                     </div>
+   
+                    <div class="input-wrapper">
+                        <label for="event-category">Categoria</span></label>
+                        <select name="event-category" id="event-category">
+                            <option value="live">Ao vivo</option>
+                            <option value="podcast">Podcast</option>
+                            <option value="mentorship">Mentoria</option>
 
+
+                        </select>
+                    </div>
 
                 </div>
             </fieldset>
