Checkbox customizado e com acessibilidade

--- a/Stage3/Projeto03/index.html
+++ b/Stage3/Projeto03/index.html
@@ -72,6 +72,11 @@
                         <label for="event-password">Senha de acesso para os participantes<span>(mínimo 8 caracteres)</span></label>
                         <input type="password" name="event-password" id="event-password"/>
                     </div>
+
+                    <div class="checkbox-wrapper">
+                        <input type="checkbox" name="event-private" id="event-private"/>
+                        <label for="event-private">Evento privado</label>
+                    </div>
             </fieldset>
 
             <fieldset>
