Criando estilos para o submit

--- a/Stage3/Projeto03/index.html
+++ b/Stage3/Projeto03/index.html
@@ -101,10 +101,12 @@
                         </div>
                     </div>
                 </div>
+            </fieldset>            
+        </form>  
 
-            </fieldset>
-
-        </form>    
+        <footer>
+            <input class="button" type="submit" value="Salvar evento">
+        </footer>
     </div>
 </body>
 </html>
