--- a/Stage3/Projeto03/index.html
+++ b/Stage3/Projeto03/index.html
@@ -17,7 +17,7 @@
             <h1>Crie e compartilhe seu evento.</h1>
             <p>O primeiro passo, é preencher esse formulário de inscrição.</p>
         </header>
-        <form action="">
+        <form id="event-form">
             
             <fieldset>
                 <div class="fieldset-wrapper">                    
@@ -65,12 +65,12 @@
 
                     <div class="input-wrapper">
                         <label for="event-email">E-mail do administrador<span>(digite um email válido)</span></label>
-                        <input type="email" name="event-email" id="event-email"/>
+                        <input type="email" name="event-email" id="event-email" required/>
                     </div>
 
                     <div class="input-wrapper">
                         <label for="event-password">Senha de acesso para os participantes<span>(mínimo 8 caracteres)</span></label>
-                        <input type="password" name="event-password" id="event-password"/>
+                        <input type="password" name="event-password" id="event-password" required minlength="8"/>
                     </div>
 
                     <div class="checkbox-wrapper">
@@ -105,7 +105,7 @@
         </form>  
 
         <footer>
-            <input class="button" type="submit" value="Salvar evento">
+            <input class="button" form="event-form" type="submit" value="Salvar evento">
         </footer>
     </div>
 </body>
