Versão desktop com CSS Grid

--- a/Stage3/Projeto05/index.html
+++ b/Stage3/Projeto05/index.html
@@ -41,6 +41,11 @@
                 <img src="https://images.pexels.com/photos/5804026/pexels-photo-5804026.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="Imagem de um rádio antigo" srcset="">
                 <h2><span>Datilografia</span> Aplicativo</h2>
             </div>
+
+            <div class="card">
+                <img src="https://images.pexels.com/photos/159438/android-tv-game-controller-game-controller-video-game-controller-android-game-controller-159438.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Imagem de um rádio antigo" srcset="">
+                <h2><span>Jogos</span> Games</h2>
+            </div>
         </main>
     </div>
 </body>
