--- a/Stage5/Projeto01/index.html
+++ b/Stage5/Projeto01/index.html
@@ -11,19 +11,20 @@
 </head>
 <body>
     <main>
-        <div class="screen1 hide">
+        <div class="screen1">
             <h1>Jogo da Adivinhação</h1>
             <p>Adivinhe um número entre 0 e 10</p>
             <form>
-                <input type="number">
-                <button>Tentar</button>
+                <input id="inputNumber" type="number">
+                <button id="btnTry">Tentar</button>
             </form>
         </div>
 
-        <div class="screen2">
+        <div class="screen2 hide">
             <h2>Acertou em 3 vezes</h2>
-            <button>Jogar novamente</button>
+            <button id="btnReset">Jogar novamente</button>
         </div>
-    </main>    
+    </main>
+    <script src="main.js"></script>    
 </body>
 </html>
