--- a/Stage5/Desafio01/index.html
+++ b/Stage5/Desafio01/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
     <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biscoito da Sorte</title>
@@ -12,24 +13,22 @@
 </head>
 <body>
     <main>
-        <div class="screen1 hide">
+        <div class="screen1">
             <h1>Qual é a sua sorte de hoje?</h1>
             <p>Abra o biscoito e descubra</p>
-            <img src="assets/biscoito1.svg" alt="Biscoito da Sorte">
+            <div id="cookieClosed"></div>
         </div>
 
-        <div class="screen2 ">
+        <div class="screen2 hide">
             <h1>Aqui está a sua sorte de hoje:</h1>
             <div class="border">
                 <h2>Se alguém está tão cansado que não possa te dar um sorriso, deixa-lhe o teu.</h2>
             </div>
-            <img src="assets/biscoito2.svg" alt="Biscoito da Sorte">
-            <button>Abrir outro biscoito</button>
+            <div id="cookieOpened"></div>
+            <button id="tryAgain">Abrir outro biscoito</button>            
         </div>
 
-        
-    </main>
-    
+    </main>    
+    <script src="main.js"></script>
 </body>
-<script src="main.js"></script>
 </html>
