--- a/Stage6/Projeto02/index.html
+++ b/Stage6/Projeto02/index.html
@@ -20,9 +20,9 @@
             <h1>GitHub Favorites</h1>
             <div class="search">
                 <label class="sr-only" for="input-search">Usuário do Github</label>
-                <input id="input-search" type="text" placeholder="Usuário do GitHub" />
-                <button class="remove">&times;</button>
-            </div>
+                <input id="input-search" type="text" placeholder="Usuário do Github">
+                <button>&plus;</button>
+              </div>
         </header>
         <table>
             <thead>
